k8s/argo-rollouts/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  selector:
    app: argo-rollouts-dashboard
  ports:
    - port: 3100
      targetPort: 3100
